CRUD Materias y Matriculas

--- a/PryEjercicio/Views/Shared/_Layout.cshtml
+++ b/PryEjercicio/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
+    <title>@ViewBag.Title - SGE</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -24,15 +24,19 @@
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Lista Alumnos", "Index", "Alumnos")</li>
+                    <li>@Html.ActionLink("Materias", "Index", "Materias")</li>
+                    <li>@Html.ActionLink("Matrículas", "Index", "Matriculas")</li>
+
                 </ul>
             </div>
         </div>
     </div>
     <div class="container body-content">
-        @RenderBody()
+        @RenderBody()<!--Aqui se renderiza la vista-->
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+            <p>&copy; @DateTime.Now.Year - Universidad de las Fuerzas Armadas Espe - Sede Latacunga- Certificacion I</p>
         </footer>
     </div>
 
